Fix error messages text, blank window text alignment in addTemplates #216202455985797

--- a/public/sources/less/ui/vc-graphics/styles.less
+++ b/public/sources/less/ui/vc-graphics/styles.less
@@ -25,7 +25,7 @@
       margin: @vcui-graphics-helper-margin;
       font-size: @vcui-graphics-helper-font-size;
       display: inline-block;
-      text-align: left;
+      text-align: center;
     }
   }
 
